<resources>
    <string name="app_name">calculadoraUtilitis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_calculadora">Calculadora</string>
    <string name="menu_descarga">Descarga</string>
    <string name="menu_subida">Subida</string>
    <string name="menu_datos">Datos</string>

    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="num_suma">+</string>
    <string name="num_resta">-</string>
    <string name="num_multiplicacion">x</string>
    <string name="num_division">%</string>
    <string name="num_igual">=</string>
    <string name="num_limpiar">Limpiar</string>
    <string name="num_regresaruno"> Atras </string>

    <string name="info_tam"> Tamaño de archivo</string>
    <string name="info_velocidad"> Velocidad de descarga en segundos</string>
    <string name="info_velocidad_subida"> Velocidad de subida en segundos</string>
    <string name="info_tiempo">Tiempo de descarga</string>
    <string name="info_tiempo_subida">Tiempo de subida</string>
    <string name="info_calcular">Calcular</string>

    <string name="info_Kb">Kb</string>
    <string name="info_KB">KB</string>
    <string name="info_Mb">Mb</string>
    <string name="info_MB">Mb</string>
    <string name="info_Gb">Gb</string>
    <string name="info_GB">GB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>