<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculadora"
            android:icon="@drawable/ic_calculadora"
            android:title="@string/menu_calculadora" />
        <item
            android:id="@+id/nav_descarga"
            android:icon="@drawable/ic_baseline_call_received_24"
            android:title="@string/menu_descarga" />
        <item
            android:id="@+id/nav_subida"
            android:icon="@drawable/ic_subida"
            android:title="@string/menu_subida" />
        <item
            android:id="@+id/nav_datos"
            android:icon="@drawable/ic_baseline_storage_24"
            android:title="@string/menu_datos" />
    </group>
</menu>