<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calculadora">

    <fragment
        android:id="@+id/nav_calculadora"
        android:name="com.aplication.calculadorautilitis.ui.calculadora.CalculadoraFragment"
        android:label="@string/menu_calculadora"
        tools:layout="@layout/fragment_calculadora" />

    <fragment
        android:id="@+id/nav_descarga"
        android:name="com.aplication.calculadorautilitis.ui.descarga.DescargaFragment"
        android:label="@string/menu_descarga"
        tools:layout="@layout/fragment_descarga" />

    <fragment
        android:id="@+id/nav_subida"
        android:name="com.aplication.calculadorautilitis.ui.subida.SubidaFragment"
        android:label="@string/menu_subida"
        tools:layout="@layout/fragment_subida" />
    <fragment
        android:id="@+id/nav_datos"
        android:name="com.aplication.calculadorautilitis.ui.datos"
        android:label="@string/menu_datos"
        tools:layout="@layout/fragment_datos" />
</navigation>