<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.datos">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/text_view_kilobits"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="108dp"
        android:gravity="center_vertical"
        android:text="@string/info_Kb"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_view_megabytes"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="422dp"
        android:layout_marginEnd="107dp"
        android:gravity="center_vertical"
        android:text="@string/info_MB"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_view_gigabits"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="493dp"
        android:layout_marginEnd="107dp"
        android:gravity="center_vertical"
        android:text="@string/info_Gb"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_view_gigabytes"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="567dp"
        android:layout_marginEnd="105dp"
        android:gravity="center_vertical"
        android:text="@string/info_GB"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_view_kilobyes"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="108dp"
        android:gravity="center_vertical"
        android:text="@string/info_KB"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_view_megabits"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="109dp"
        android:gravity="center_vertical"
        android:text="@string/info_Mb"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/text_edit_valor"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/spinner_tipo_a_convertir"
        android:layout_width="156dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="27dp"
        android:layout_toEndOf="@+id/text_edit_valor" />

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="390dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="115dp"
        android:text="@string/info_calcular"
        android:textSize="24sp" />
</RelativeLayout>